--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/valleyman89/FrontEndMentor-Solution---Interactive-comments-section",
+  "homepage": "https://valleyman89.github.io/FrontEndMentor-Solution---Interactive-comments-section",
   "name": "interactive-comments",
   "version": "0.1.0",
   "private": true,
